styles/index.css
/* #region HOME */
.home {
  /*background-image: url("./images/home-background.jpg");*/
  background-color: rgb(48, 48, 48);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  align-items: end;
  padding: 3rem 0;
}

.home-layout-first { grid-area: one; }
.home-layout-second { grid-area: two; }
.home-layout-third { grid-area: three; }

.home-layout {
  display: grid;
  grid-template-areas: 
  "one"
  "two"
  "three";
  row-gap: 3rem;
  column-gap: calc(12vw);
  justify-items: start;
  align-items: center;
}

@media screen and (min-width: 50em) {
  .home-layout {
    grid-template-areas: 
    "one one"
    "two three";
  }
  .home-layout-third {
    justify-self: end;
  }
}

.black-div-button {
  background-color: var(--cl-neutral-900);
  padding: 0.5rem 1.5rem;
  width: 24rem;
  height: 8rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  line-height: 1.8rem;
  text-align: start;
}

.black-div-button p {
  min-width: 9rem;
  line-height: 2.4rem;
}

.black-div-button img {
  width: 4.5rem;
  height: 4.5rem;
  transition: transform 0.7s ease, opacity 0.7s ease;
  transform: translateX(-60%);
  opacity: 0;
}

.black-div-button:hover img {
  transform: translateX(0%);
  opacity: 1;
}
/* #endregion */

/* #region ABOUT US */
.au-left-column { grid-area: one; }
.au-vid-column { grid-area: two; }

.about-us-layout {
  display: grid;
  grid-template-areas: 
  "one"
  "two";
  align-items: center;
  height: 100%;
}

@media screen and (min-width: 50em) {
  .about-us-layout {
    grid-auto-columns: 1fr;
    grid-template-areas: 
    "one one two two two";
  }
}

.au-left-column {
  justify-content: center;
  gap: 2rem;
}

.au-vid-column {
  margin: 0 auto;
  background-color: var(--cl-neutral-900);
  width: 45rem;
  height: 30rem;
}

/* #endregion */

/* #region SCROLL SLİDER */
.slide-screen-wrapper {
  min-height: 260vh;
  position: relative;
  background-color: var(--cl-neutral-900);
}

.slide-screen {
  position: sticky;
  top: 0;
  height: 100vh;
  color: var(--cl-neutral-200);
  display: grid;
  padding: 2rem 0;
}

.slide-header-container {
  display: flex;
  gap: 1rem;
  justify-content: space-between;
}

.slide-card-header {
  flex: 1;
  justify-content: center;
  align-items: start;
}

.slide-card-header > p {
  height: 2em;
}

.slide-card-bar {
  margin-top: 4rem;
  transition: background-color 0.5s ease;
  width: 100%;
  height: 0.6rem;
  background-color: white;
}

.red-bar {
  background-color: red;
}

.slide-card-text > p:nth-child(1) { grid-area: one; }
.slide-card-text > p:nth-child(2) { grid-area: two; }
.slide-card-text > p:nth-child(3) { grid-area: three; }
.slide-card-text > p:nth-child(4) { grid-area: four; }
.slide-card-text > p:nth-child(5) { grid-area: five; }
.slide-card-text > p:nth-child(6) { grid-area: six; }
.slide-card-text > p:nth-child(7) { grid-area: seven; }

.slide-card-text {
  width: clamp();
  display: grid;
  grid-auto-columns: 1fr;
  gap: 1rem;
  grid-template-areas: 
  "one one"
  "two three"
  "four five"
  "six seven";
}

@media screen and (min-width: 50em) {
  .slide-card-text {
    grid-template-areas: 
    "one one one ."
    "two three four ."
    "five six seven .";
  }
}

/* #endregion */

/* #region SUCCESS STORİES */
.success-stories {
  display: flex;
  align-items: center;
}

.success-stories-layout {
  width: 95%;
  margin-left: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 3rem;
}

.success-stories-hero {
  display: flex;
  gap: 20rem;
  padding-right: 8rem;
  align-items: end;
}

.left-button,
.right-button {
  background-color: white;
  border: 0;
  width: 3rem;
  height: 4.5rem;
  border-radius: 6px;
  text-align: center;
}

.left-button:hover,
.right-button:hover {
  background-color: rgb(202, 202, 202);
}

.arrow-buttons {
  display: flex;
  gap: 0.4rem;
}

.story-card {
  background-color: gray;
  height: 32rem;
  width: var(--card-width);
  flex: 0 0 auto;
}

.card-screen {
  height: 32rem;
  width: 100%;
  overflow-x: scroll;
}

.card-grid {
  --card-width: 24rem;
  transition: all 0.6s ease;
  width: calc(var(--card-width) * 8);
  display: flex;
  gap: 1rem;
  justify-content: center;
}

/* #endregion */

/* #region REFERANCES */

/* #endregion */

/* #region BLOG LİNKS */

/* #endregion */

/* #region CONTACT */

/* #endregion */


/*--- References ---*/

.referances {
  margin-top: 6vh;
  padding: 6vh var(--padding-left);
  overflow-x: hidden;
}

.referances > p {
  margin-bottom: 6vh;
}

@keyframes carousel {
  from {
    left: 0px;
  }
  to {
    left: -100vw;
  }
}

.brand-scroll {
  margin-left: calc(-1 * var(--padding-left));
  margin-bottom: 6vh;
  width: 200vw;
  height: 25vh;
  background-color: rgb(255, 255, 255);
  display: flex;
  align-items: center;
  justify-content: space-around;
  position: relative;
  animation: carousel 15s linear infinite;
}

.brand-scroll > img {
  width: 5vw;
  height: 5vw;
}

.button-holder > a > div {
  opacity: 0.8;
}

.referances > .button-holder {
  justify-content: center;
}

/*--- Blog ---*/

.blog-links {
  padding: 7vh var(--padding-left);
}

.blog-card-holder {
  margin: 4vh 0;
  display: flex;
  justify-content: space-between;
}

.blog-card {
  background-color: aliceblue;
  width: 25vw;
  height: 40vh;
  display: flex;
  flex-direction: column;
  gap: 1vh;
}

/*--- Contact ---*/

.contact {
  background-color: white;
  padding: 5vh 3vw;
  margin: 10vh 14vw;
  height: 28vh;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 2fr;
  row-gap: 2vh;
  column-gap: 5vw;
  box-shadow: 10px 10px 10px rgb(199, 199, 199);
}

.contact > p:first-child {
  grid-row: 1 / 2;
  grid-column: 1 / 2;
  margin: auto 0;
}

.contact > p + p {
  grid-row: 2 / 3;
  grid-column: 1 / 2;
}

.contact > form {
  grid-row: 1 / 3;
  grid-column: 2 / 3;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: repeat(3, 1fr);
  row-gap: 2vh;
  column-gap: 1vw;
}

input[type="text"] {
  background-color: rgb(236, 236, 236);
  border-radius: 4px;
  border: none;
  padding: 5px;
}

input[type="checkbox"] {
  margin-right: 4px;
}

label > a {
  text-decoration: underline;
}

.third-row-holder {
  grid-row: 3 / 4;
  grid-column: 1 / 3;
  display: flex;
  justify-content: space-between;
}

.checkbox-holder {
  display: flex;
  align-items: center;
  justify-content: start;
}

.third-row-holder > button {
  border: none;
  background-color: black;
  color: var(--cl-neutral-200);
  padding: 1vh 1vw;
  border-radius: 4px;
}

/*--- Footer ---*/

footer {
  height: 30vh;
  background-color: black;
}

